@@ -248,12 +248,25 @@ Example:
 __ ../ref/rst/directives.html#admonitions
 
 
-caption numbering
-`````````````````
+figure and table captions
+`````````````````````````
+The caption_ package provides many ways to customise the captions in
+floating environments like figure and table.
 
 The chngcntr_ package helps to configure the numbering of figure and table
-caption numberings. Some document classes (e.g. KOMA-script_) provide
-additional configuration. Also see the related `FAQ entry`__
+caption numberings.
+
+Some document classes (e.g. KOMA-script_) provide additional configuration.
+Also see the related `LaTeX FAQ entry`__
+
+Example
+  ::
+
+    \usepackage{caption}
+    \captionsetup{justification=raggedleft,singlelinecheck=false}
+
+.. _caption:
+   http://dante.ctan.org/CTAN/help/Catalogue/entries/caption.html
 
 .. _chngcntr:
    http://dante.ctan.org/CTAN/help/Catalogue/entries/chngcntr.html
@@ -775,6 +788,33 @@ Example:
 
 __ ../ref/rst/directives.html#rubric
 
+
+table of contents
+`````````````````
+
+If you want page numbers in the table of contents, specify
+``--use-latex-toc``:
+
+* LaTeX is used to generate the table of contents (ToC) with the
+  ``\tableofcontents`` macro at the given location.
+
+  Styling options depend on the choosen document class
+  (see e.g. the `KOMA-Script Guide`_ for the `KOMA-script`_ classes).
+
+* Local ToCs are done with the minitoc_ package. See its documentation__ for
+  the numerous configuration options.
+
+.. note::
+   Minitoc supports local ToCs only at "part" level and top section level
+   ("chapter" or "section"). Local `contents` directives at lower levels
+   are ignored (a warning is issued).
+
+   If you really require "low-level" local ToCs, turn off the
+   `use-latex-toc` option.
+
+.. _minitoc: http://dante.ctan.org/CTAN/help/Catalogue/entries/minitoc.html
+__ http://dante.ctan.org/CTAN/macros/latex/contrib/minitoc/minitoc.pdf
+
 title reference role
 ````````````````````
 
@@ -999,7 +1039,7 @@ influence section numbering.
   LaTeX output, so that LaTeX generates a table of contents and
   generates section numbers. Usually one does not want to have
   section numbers generated by Docutils in this case, therefore
-  ``--no-section-numbering`` should be specified.
+  ``--no-section-numbering`` is the default with this option.
 
   The advantage is that LaTeX does put page numbers into the
   table of contents, but the section depth is limited by the
@@ -1227,9 +1267,3 @@ Miscellaneous
 
 * For additional docinfo items: the field_body is inserted as text, i.e. no
   markup is done.
-
-* LaTeX does not support multiple tocs in one document
-  (might be no limitation except for docutils documentation).
-
-  The "minitoc" latex package can produce per-chapter tocs in
-  book and report document classes.
